# mininote

./: .gitignore  README.de.md  README.en.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.pt-BR.md  README.ru.md  README.zh-TW.md  README_de.md  README_en-US.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_ko.md  README_pt-BR.md  README_ru.md  README_zh-TW.md  fix.cjs  index.html  package-lock.json  package.json  readme.md  vite.config.ts
.github/workflows/: build-artifacts.yml  release.yml
MiniNote.xcodeproj/: project.pbxproj
MiniNote/App/: AppDelegate.swift  MiniNoteApp.swift
MiniNote/Config/: FinderExtension-Info.plist  MiniNote-Info.plist  QuickLook-Info.plist
MiniNote/Models/: AppState.swift  Document.swift  DocumentType.swift  SessionStore.swift
MiniNote/Services/: FileService.swift  LocalizationService.swift  PasteboardService.swift  UpdateService.swift
MiniNote/Settings/: SettingsView.swift
MiniNote/Views/: ContentView.swift  EditorTextView.swift  StatusBar.swift  (+3 more)
scripts/: before-tauri-build.mjs  set-version.mjs
src/: App.css  main.tsx
src-tauri/: Cargo.toml  build.rs  linux-desktop-template.hbs  nsis-hooks.nsh  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: MiniNote.mint.icns  icon.icns
src-tauri/src/: desktop.rs  json_io.rs  lib.rs  locales.rs  main.rs
src-tauri/src/services/: frontmatter.rs  mod.rs  notes.rs  source_watcher.rs
src-tauri/src/updater/: check.rs  commands.rs  download.rs  file_lock.rs  helper.rs  install.rs  manifest.rs  mod.rs  platform.rs  scheduler.rs  settings.rs  state.rs  types.rs  version.rs
src-tauri/src/updater/fixtures/: update-manifest.valid.json
tests/: AppCss.test.ts
(+92 files in other folders)
