[package]
name = "mininote"
version = "1.4.0"
description = "A lightweight cross-platform desktop note app"
authors = ["Lucas"]
edition = "2021"
default-run = "mininote"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mininote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-clipboard-manager = "2"
tokio = { version = "1", features = ["time"] }
notify = "7"
notify-debouncer-mini = "0.5"
trash = "5"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
semver = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
dirs = "6"
libc = "0.2"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Shell",
] }
